@@ -1910,7 +1910,9 @@ static const char  *static_camera_list[] =
 "Canon EOS 450D / Digital Rebel XSi / Kiss Digital X2",
 "Canon EOS 500D / Digital Rebel T1i / Kiss Digital X3",
 "Canon EOS 550D / Digital Rebel T2i / Kiss Digital X4",
+"Canon EOS 600D / Digital Rebel T3i / Kiss Digital X5",
 "Canon EOS 1000D / Digital Rebel XS / Kiss Digital F",
+"Canon EOS 1100D / Digital Rebel T3 / Kiss Digital X50",
 "Canon EOS D2000C",
 "Canon EOS-1D",
 "Canon EOS-1DS",
@@ -1965,8 +1967,8 @@ static const char  *static_camera_list[] =
 "Fuji FinePix S9000/S9500",
 "Fuji FinePix S9100/S9600",
 "Fuji FinePix S200EXR",
-"Fuji FinePix X100",
 "Fuji FinePix HS10/HS11",
+"Fuji FinePix X100",
 "Fuji IS-1",
 "Hasselblad CFV",
 "Hasselblad H3D",
@@ -2144,6 +2146,7 @@ static const char  *static_camera_list[] =
 "Olympus E-P1",
 "Olympus E-P2",
 "Olympus E-PL1",
+"Olympus E-PL2",
 "Olympus SP310",
 "Olympus SP320",
 "Olympus SP350",
